scrollbar look chage, feed post by latest, signup direct fix

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,5 +26,10 @@
   background: rgb(255, 123, 0);
 }
 
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #ffffff20 transparent;
+}
+
 
  
